Edited the LaTeX formula to display the correct equation.

--- a/question11.ipynb
+++ b/question11.ipynb
@@ -40,7 +40,7 @@
    "source": [
     "$$\n",
     "\\overline{x}=\n",
-    "\\frac{x_1 + x_2 + x_3 + \\cdot\\cdot\\cdot + x_n}{n}=\\frac{1}{n}\\Bigg(\\sum_{n=1}^{n}x_i\\Bigg)\n",
+    "\\frac{x_1 + x_2 + x_3 + \\cdot\\cdot\\cdot + x_n}{n}=\\frac{1}{n}\\Bigg(\\sum_{i=1}^{n}x_i\\Bigg)\n",
     "$$"
    ]
   },
